start:dev.stdout.txt
c[[90m4:59:48 PM[0m] Starting compilation in watch mode...

[[90m4:59:50 PM[0m] Found 0 errors. Watching for file changes.

[2024-09-06T21:59:50.398Z] [LOG] [Bootstrap] [NestFactory] Starting Nest application...
[2024-09-06T21:59:50.407Z] [LOG] [Bootstrap] [InstanceLoader] TypeOrmModule dependencies initialized
[2024-09-06T21:59:50.407Z] [LOG] [Bootstrap] [InstanceLoader] ConfigHostModule dependencies initialized
[2024-09-06T21:59:50.407Z] [LOG] [Bootstrap] [InstanceLoader] ConfigModule dependencies initialized
[2024-09-06T21:59:50.407Z] [LOG] [Bootstrap] [InstanceLoader] ConfigModule dependencies initialized
[2024-09-06T21:59:50.424Z] [LOG] [Bootstrap] [InstanceLoader] TypeOrmCoreModule dependencies initialized
[2024-09-06T21:59:50.425Z] [LOG] [Bootstrap] [InstanceLoader] TypeOrmModule dependencies initialized
[2024-09-06T21:59:50.425Z] [LOG] [Bootstrap] [InstanceLoader] AppModule dependencies initialized
[2024-09-06T21:59:50.428Z] [LOG] [Bootstrap] [RoutesResolver] ProcessController {/processes}:
[2024-09-06T21:59:50.430Z] [LOG] [Bootstrap] [RouterExplorer] Mapped {/processes, GET} route
[2024-09-06T21:59:50.430Z] [LOG] [Bootstrap] [RouterExplorer] Mapped {/processes, POST} route
[2024-09-06T21:59:50.431Z] [LOG] [Bootstrap] [RouterExplorer] Mapped {/processes/:id/stop, POST} route
[2024-09-06T21:59:50.431Z] [LOG] [Bootstrap] [RouterExplorer] Mapped {/processes/:id, GET} route
[2024-09-06T21:59:50.431Z] [LOG] [Bootstrap] [RouterExplorer] Mapped {/processes/scaling-rule, POST} route
[2024-09-06T21:59:50.431Z] [LOG] [Bootstrap] [RouterExplorer] Mapped {/processes/scaling-rules, GET} route
[2024-09-06T21:59:50.432Z] [LOG] [Bootstrap] [RouterExplorer] Mapped {/processes/:id/restart, POST} route
[2024-09-06T21:59:50.438Z] [LOG] [Bootstrap] [NestApplication] Nest application successfully started
[2024-09-06T22:00:16.109Z] [ERROR] [Bootstrap] [ProcessManagerService] [long-running-process] [eval]:1
"
^

SyntaxError: Invalid or unexpected token
    at makeContextifyScript (node:internal/vm:185:14)
    at node:internal/process/execution:107:22
    at [eval]-wrapper:6:24
    at runScript (node:internal/process/execution:101:62)
    at evalScript (node:internal/process/execution:133:3)
    at node:internal/main/eval_string:51:3

Node.js v20.16.0
[2024-09-06T22:00:16.111Z] [LOG] [Bootstrap] [ProcessManagerService] Process long-running-process (96fd9ab2-402c-4099-9776-9442e9d06e69) exited with code 1
[2024-09-06T22:00:16.111Z] [ERROR] [Bootstrap] [ProcessManagerService] Process long-running-process (96fd9ab2-402c-4099-9776-9442e9d06e69) crashed with code 1
